--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Hey there I have a cool website</h1>
 </header>
 <main>
-    <section class="d-block">
+    <section class="d-inline">
         <div><br><br></div>
         <p class="modify-bar"></p>
     
@@ -30,7 +30,7 @@
             blanditiis odio distinctio sapiente facilis soluta laudantium deserunt, eius, delectus dicta dolor qui adipisci
             animi ducimus.</p>
     </section>
-    <aside class="d-block">
+    <aside class="d-inline">
         <h3 class="dock-right">
             Image Here
         </h3>
